Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned char BYTE;
typedef unsigned char * LPBYTE;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long MSGADDR;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
C13DRVAPI ERRVAL __stdcall C13_CSGetClientInfo(LPSTR namestring,USHORT namestringlen,LPSTR vendorstring,USHORT vendorstringlen,LPVOID clientinfo);
C13DRVAPI LPSTR __stdcall C13_CSGetClientInfoName(LPSTR namestring,USHORT namestringlen,LPVOID clientinfo);
C13DRVAPI LPSTR __stdcall C13_CSGetClientInfoVendor(LPSTR vendorstring,USHORT vendorstringlen,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSGetConfigurationInfo(INT socketval,LPVOID configinfo,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSGetFirstClient(INT socketval,USHORT attributes,LPVOID clientinfo);
C13DRVAPI USHORT __stdcall C13_CSGetFirstTuple(INT socketval,USHORT attributes,USHORT desiredtuple,LPVOID tupleinfo);
C13DRVAPI ERRVAL __stdcall C13_CSGetNextClient(INT socketval,USHORT attributes,LPVOID clientinfo);
C13DRVAPI USHORT __stdcall C13_CSGetNextTuple(USHORT desiredtuple,LPVOID tupleinfo);
C13DRVAPI ERRVAL __stdcall C13_CSGetStatus(LPUSHORT cardstate,LPUSHORT socketstate,INT socketval);
C13DRVAPI USHORT __stdcall C13_CSGetStatusCard(INT socketval);
C13DRVAPI USHORT __stdcall C13_CSGetStatusSocket(INT socketval);
C13DRVAPI USHORT __stdcall C13_CSGetTupleChan(INT socketval);
C13DRVAPI USHORT __stdcall C13_CSGetTupleCount(INT socketval,USHORT desiredtuple);
C13DRVAPI USHORT __stdcall C13_CSGetTupleData(INT socketval,USHORT tupleoffset,LPBYTE tupledata,USHORT tupledatalen,LPVOID tupleinfo);
C13DRVAPI USHORT __stdcall C13_CSGetTupleIndex(INT socketval,USHORT index,USHORT desiredtuple,LPBYTE tupledata,USHORT tupledatalen);
C13DRVAPI ERRVAL __stdcall C13_CSGetTupleManuf(LPUSHORT code,LPUSHORT info,INT socketval);
C13DRVAPI USHORT __stdcall C13_CSLevel(VOID);
C13DRVAPI ERRVAL __stdcall C13_CSMapMemPage(ULONG cardoffset,USHORT page,LPVOID windowinfo);
C13DRVAPI ERRVAL __stdcall C13_CSModifyConfiguration(INT socketval,LPVOID configinfo,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSModifyWindow(USHORT attributes,USHORT accessspeed,LPVOID windowinfo);
C13DRVAPI ERRVAL __stdcall C13_CSRegisterClient(USHORT attributes,USHORT eventmask,USHORT version,LPVOID clientinfo,LPVOID func,USHORT data,LPVOID dataptr);
C13DRVAPI ERRVAL __stdcall C13_CSReleaseConfiguration(INT socketval,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSReleaseDMA(INT socketval,USHORT desiredchannel,BYTE attributes,BYTE assignedchannel,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSReleaseExclusive(INT socketval,USHORT attributes,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSReleaseIO(INT socketval,USHORT baseport,USHORT numports,USHORT attributes,USHORT ioaddrlines,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSReleaseIRQ(INT socketval,USHORT attributes,USHORT assignedirq,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSReleaseWindow(LPVOID windowinfo);
C13DRVAPI ERRVAL __stdcall C13_CSRequestConfiguration(INT socketval,LPVOID configinfo,LPVOID clientinfo);
C13DRVAPI BYTE __stdcall C13_CSRequestDMA(INT socketval,USHORT desiredchannel,BYTE attributes,LPBYTE assignedchannel,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSRequestExclusive(INT socketval,USHORT attributes,LPVOID clientinfo);
C13DRVAPI USHORT __stdcall C13_CSRequestIO(INT socketval,USHORT baseport,USHORT numports,USHORT attributes,USHORT ioaddrlines,LPVOID clientinfo);
C13DRVAPI USHORT __stdcall C13_CSRequestIRQ(INT socketval,LPUSHORT attributes,USHORT irqinfo1,USHORT irqinfo2,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSRequestWindow(INT socketval,LPUSHORT attributes,LPULONG base,LPULONG size,USHORT accessspeed,LPVOID windowinfo,LPVOID clientinfo);
C13DRVAPI ERRVAL __stdcall C13_CSResetCard(INT socketval,LPVOID clientinfo);
C13DRVAPI USHORT __stdcall C13_CSRevision(VOID);
C13DRVAPI USHORT __stdcall C13_CSSignature(VOID);
C13DRVAPI USHORT __stdcall C13_CSSocketCount(VOID);
C13DRVAPI USHORT __stdcall C13_CSValidateCIS(INT socketval);
C13DRVAPI LPSTR __stdcall C13_CSVendorString(LPSTR buf,USHORT bufsize);
C13DRVAPI VOID __stdcall C13_DARClear(USHORT maskval,USHORT addrval,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_DARGet(USHORT maskval,USHORT addrval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DARRdL(USHORT addrval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_DARRdW(USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_DARSet(USHORT maskval,USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_DARWrL(ULONG value,USHORT addrval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_DARWrW(USHORT value,USHORT addrval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescAddr(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescAlloc(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DescConfig(ULONG configval,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI USHORT __stdcall C13_DescOptRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_DescOptWr(USHORT descopt,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI MSGADDR __stdcall C13_DescPtrRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescPtrWr(MSGADDR msgaddr,BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescRd(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_DescWr(BOOL mcflag,INT taval,BOOL trflag,INT saval,LPUSHORT desc,HCARD handleval);
C13DRVAPI ULONG __stdcall C13_Div(ULONG diva,ULONG divb);
C13DRVAPI INT __stdcall C13_DllUsageCount(VOID);
C13DRVAPI ERRVAL __stdcall C13_DspBioClear(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_DspBioRd(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspBioSet(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspIntfClear(USHORT intmask,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_DspIntfRd(USHORT intmask,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspIntmClear(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspIntmSet(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspXfClear(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_DspXfRd(HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_DspXfSet(HCARD handleval);
C13DRVAPI LPCSTR __stdcall C13_ErrDesc(INT errval);
C13DRVAPI LPCSTR __stdcall C13_ErrDescStr(INT errval);
C13DRVAPI LPCSTR __stdcall C13_ErrName(INT errval);
C13DRVAPI BOOL __stdcall C13_ErrorIsTaggedBC(MSGADDR msgaddr,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ErrorIsTaggedRT(BOOL mcflag,INT taval,BOOL trflag,INT saval,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ErrorResponse(USHORT responseval,HCARD handleval);
C13DRVAPI VOID __stdcall C13_ErrorSync(BOOL value,HCARD handleval);
C13DRVAPI ERRVAL __stdcall C13_ErrorTimeout(USHORT timeoutval,HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ExtDinRd(HCARD handleval);
C13DRVAPI BOOL __stdcall C13_ExtDoutRd(HCARD handleval);