Source/ISS/Development/CommonInterfaceControlLayer/Cicl_Devices/AtxmlLE1553_5/Vendor/API/C13W32VB.BAS

Public Declare Function C13_CSGetClientInfo Lib "C13W32.DLL" Alias "" (ByRef namestring As String, ByVal namestringlen As Integer, ByRef vendorstring As String, ByVal vendorstringlen As Integer, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSGetClientInfoName Lib "C13W32.DLL" Alias "" (ByRef namestring As String, ByVal namestringlen As Integer, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSGetClientInfoVendor Lib "C13W32.DLL" Alias "" (ByRef vendorstring As String, ByVal vendorstringlen As Integer, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSGetConfigurationInfo Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByRef configinfo As Long, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSGetFirstClient Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal attributes As Integer, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSGetFirstTuple Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal attributes As Integer, ByVal desiredtuple As Integer, ByRef tupleinfo As Long) As Integer
Public Declare Function C13_CSGetNextClient Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal attributes As Integer, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSGetNextTuple Lib "C13W32.DLL" Alias "" (ByVal desiredtuple As Integer, ByRef tupleinfo As Long) As Integer
Public Declare Function C13_CSGetStatus Lib "C13W32.DLL" Alias "" (ByRef cardstate As Integer, ByRef socketstate As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CSGetStatusCard Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Integer
Public Declare Function C13_CSGetStatusSocket Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Integer
Public Declare Function C13_CSGetTupleChan Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Integer
Public Declare Function C13_CSGetTupleCount Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal desiredtuple As Integer) As Integer
Public Declare Function C13_CSGetTupleData Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal tupleoffset As Integer, ByRef tupledata As Byte, ByVal tupledatalen As Integer, ByRef tupleinfo As Long) As Integer
Public Declare Function C13_CSGetTupleIndex Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal index As Integer, ByVal desiredtuple As Integer, ByRef tupledata As Byte, ByVal tupledatalen As Integer) As Integer
Public Declare Function C13_CSGetTupleManuf Lib "C13W32.DLL" Alias "" (ByRef code As Integer, ByRef info As Integer, ByVal socketval As Long) As Long
Public Declare Function C13_CSLevel Lib "C13W32.DLL" Alias "" () As Integer
Public Declare Function C13_CSMapMemPage Lib "C13W32.DLL" Alias "" (ByVal cardoffset As Long, ByVal page As Integer, ByRef windowinfo As Long) As Long
Public Declare Function C13_CSModifyConfiguration Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByRef configinfo As Long, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSModifyWindow Lib "C13W32.DLL" Alias "" (ByVal attributes As Integer, ByVal accessspeed As Integer, ByRef windowinfo As Long) As Long
Public Declare Function C13_CSRegisterClient Lib "C13W32.DLL" Alias "" (ByVal attributes As Integer, ByVal eventvalmask As Integer, ByVal version As Integer, ByRef clientinfo As Long, ByRef func As Long, ByVal data As Integer, ByRef dataptr As Long) As Long
Public Declare Function C13_CSReleaseConfiguration Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSReleaseDMA Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal desiredchannel As Integer, ByVal attributes As Byte, ByVal assignedchannel As Byte, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSReleaseExclusive Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal attributes As Integer, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSReleaseIO Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal basevalport As Integer, ByVal numports As Integer, ByVal attributes As Integer, ByVal ioaddrlines As Integer, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSReleaseIRQ Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal attributes As Integer, ByVal assignedirq As Integer, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSReleaseWindow Lib "C13W32.DLL" Alias "" (ByRef windowinfo As Long) As Long
Public Declare Function C13_CSRequestConfiguration Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByRef configinfo As Long, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSRequestDMA Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal desiredchannel As Integer, ByVal attributes As Byte, ByRef assignedchannel As Byte, ByRef clientinfo As Long) As Byte
Public Declare Function C13_CSRequestExclusive Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal attributes As Integer, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSRequestIO Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByVal basevalport As Integer, ByVal numports As Integer, ByVal attributes As Integer, ByVal ioaddrlines As Integer, ByRef clientinfo As Long) As Integer
Public Declare Function C13_CSRequestIRQ Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByRef attributes As Integer, ByVal irqinfo1 As Integer, ByVal irqinfo2 As Integer, ByRef clientinfo As Long) As Integer
Public Declare Function C13_CSRequestWindow Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByRef attributes As Integer, ByRef baseval As Long, ByRef size As Long, ByVal accessspeed As Integer, ByRef windowinfo As Long, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSResetCard Lib "C13W32.DLL" Alias "" (ByVal socketval As Long, ByRef clientinfo As Long) As Long
Public Declare Function C13_CSRevision Lib "C13W32.DLL" Alias "" () As Integer
Public Declare Function C13_CSSignature Lib "C13W32.DLL" Alias "" () As Integer
Public Declare Function C13_CSSocketCount Lib "C13W32.DLL" Alias "" () As Integer
Public Declare Function C13_CSValidateCIS Lib "C13W32.DLL" Alias "" (ByVal socketval As Long) As Integer
Public Declare Function C13_CSVendorString Lib "C13W32.DLL" Alias "" (ByRef buf As String, ByVal bufsize As Integer) As Long
Public Declare Function C13_DARClear Lib "C13W32.DLL" Alias "_C13_DARClear@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_DARGet Lib "C13W32.DLL" Alias "_C13_DARGet@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_DARRdL Lib "C13W32.DLL" Alias "_C13_DARRdL@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_DARRdW Lib "C13W32.DLL" Alias "_C13_DARRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Function C13_DARSet Lib "C13W32.DLL" Alias "_C13_DARSet@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_DARWrL Lib "C13W32.DLL" Alias "_C13_DARWrL@12" (ByVal value As Long, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_DARWrW Lib "C13W32.DLL" Alias "_C13_DARWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_DescAddr Lib "C13W32.DLL" Alias "_C13_DescAddr@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_DescAlloc Lib "C13W32.DLL" Alias "_C13_DescAlloc@4" (ByVal handleval As Long) As Long
Public Declare Function C13_DescConfig Lib "C13W32.DLL" Alias "_C13_DescConfig@24" (ByVal configval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_DescOptRd Lib "C13W32.DLL" Alias "_C13_DescOptRd@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Integer
Public Declare Function C13_DescOptWr Lib "C13W32.DLL" Alias "_C13_DescOptWr@24" (ByVal descopt As Integer, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_DescPtrRd Lib "C13W32.DLL" Alias "_C13_DescPtrRd@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_DescPtrWr Lib "C13W32.DLL" Alias "_C13_DescPtrWr@24" (ByVal msgaddr As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_DescRd Lib "C13W32.DLL" Alias "_C13_DescRd@24" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByRef desc As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_DescWr Lib "C13W32.DLL" Alias "_C13_DescWr@24" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByRef desc As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_Div Lib "C13W32.DLL" Alias "_C13_Div@8" (ByVal diva As Long, ByVal divb As Long) As Long
Public Declare Function C13_DllUsageCount Lib "C13W32.DLL" Alias "_C13_DllUsageCount@0" () As Long
Public Declare Function C13_DspBioClear Lib "C13W32.DLL" Alias "_C13_DspBioClear@4" (ByVal handleval As Long) As Long
Public Declare Function C13_DspBioRd Lib "C13W32.DLL" Alias "_C13_DspBioRd@4" (ByVal handleval As Long) As Long
Public Declare Function C13_DspBioSet Lib "C13W32.DLL" Alias "_C13_DspBioSet@4" (ByVal handleval As Long) As Long
Public Declare Function C13_DspIntfClear Lib "C13W32.DLL" Alias "_C13_DspIntfClear@8" (ByVal intmask As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_DspIntfRd Lib "C13W32.DLL" Alias "_C13_DspIntfRd@8" (ByVal intmask As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_DspIntmClear Lib "C13W32.DLL" Alias "_C13_DspIntmClear@4" (ByVal handleval As Long) As Long
Public Declare Function C13_DspIntmSet Lib "C13W32.DLL" Alias "_C13_DspIntmSet@4" (ByVal handleval As Long) As Long
Public Declare Function C13_DspXfClear Lib "C13W32.DLL" Alias "_C13_DspXfClear@4" (ByVal handleval As Long) As Long
Public Declare Function C13_DspXfRd Lib "C13W32.DLL" Alias "_C13_DspXfRd@4" (ByVal handleval As Long) As Long
Public Declare Function C13_DspXfSet Lib "C13W32.DLL" Alias "_C13_DspXfSet@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ErrDesc Lib "C13W32.DLL" Alias "_C13_ErrDesc@4" (ByVal errval As Long) As Long
Public Declare Function C13_ErrDescStr Lib "C13W32.DLL" Alias "_C13_ErrDescStr@4" (ByVal errval As Long) As Long
Public Declare Function C13_ErrName Lib "C13W32.DLL" Alias "_C13_ErrName@4" (ByVal errval As Long) As Long
Public Declare Function C13_ErrorIsTaggedBC Lib "C13W32.DLL" Alias "_C13_ErrorIsTaggedBC@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ErrorIsTaggedRT Lib "C13W32.DLL" Alias "_C13_ErrorIsTaggedRT@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ErrorResponse Lib "C13W32.DLL" Alias "_C13_ErrorResponse@8" (ByVal responseval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_ErrorSync Lib "C13W32.DLL" Alias "_C13_ErrorSync@8" (ByVal value As Long, ByVal handleval As Long) As Long
Public Declare Function C13_ErrorTimeout Lib "C13W32.DLL" Alias "_C13_ErrorTimeout@8" (ByVal timeoutval As Integer, ByVal handleval As Long) As Long
Public Declare Function C13_ExtDinRd Lib "C13W32.DLL" Alias "_C13_ExtDinRd@4" (ByVal handleval As Long) As Long
Public Declare Function C13_ExtDoutRd Lib "C13W32.DLL" Alias "_C13_ExtDoutRd@4" (ByVal handleval As Long) As Long
